--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: minima,
 title: Mark Page,
 author: Marc Yangco,
-description: test page
+description: test page,
+base: main,
+compare: my-pages
+
